tests/parsing/smtlib/v2.6/errors/126_selector_dec_bad_sort_1.smt2
(set-logic ALL)
(declare-datatype foo ((A (x _))))
