tests/parsing/smtlib/v2.6/errors/126_selector_dec_bad_sort_1.expected
File "tests/parsing/smtlib/v2.6/errors/126_selector_dec_bad_sort_1.smt2", line 2, character 29-30:
2 | (declare-datatype foo ((A (x _))))
                                 ^
Error while parsing a selector declaration, read the reserved word '_',
      but expected a sort for the return type of the selector.
